--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -1,7 +1,11 @@
+<h1>Chat</h1>
+
+<div class="menu">
 <a href="/">Ir al home</a>
 <a href="/realTimeProducts">Ir a productos en tiempo real</a>
+</div>
 
-<h1>Chat</h1>
+
 <section class="chatContainer">
   <div >
     <form id="addMessageForm">
