--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,7 +1,9 @@
-<a href="/realtimeproducts">Ir a productos en tiempo real</a> 
-</button> <a href="/chat">Ir al chat</a></button>
-
 <h1>Tecnogirau</h1>
+
+<div class="menu">
+<a href="/">Ir al home</a>
+<a href="/realTimeProducts">Ir a productos en tiempo real</a>
+</div>
 
 <h2>Nuestros productos</h2>
 {{#if products.length}}
