--- a/src/public/css/chat.css
+++ b/src/public/css/chat.css
@@ -1,3 +1,8 @@
+.menu{
+  text-align: center;
+  margin-bottom: 15px;
+}
+
 h1,
 h2 {
   text-align: center;
@@ -50,3 +55,4 @@ a:active {
     0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.26);
   background-color: black;
 }
+
