--- a/src/views/realTimeProducts.hbs
+++ b/src/views/realTimeProducts.hbs
@@ -1,7 +1,9 @@
-<a href="/">Ir al home</a> 
-<a href="/chat">Ir al chat</a>
-
 <h1>Productos en el carrito en tiempo real</h1>
+
+<div class="menu">
+<a href="/">Ir al home</a>
+<a href="/realTimeProducts">Ir a productos en tiempo real</a>
+</div>
 
 <section id="productsContainer"></section>
 
